# social-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
apps/desktop/: bridge.py  main.py
apps/ui/: app.js  index.html  style.css
apps/web/: server.py
cloud/: README.md
cross_post_groups/: all_platforms.yaml  facebook_only.yaml  linkedin_only.yaml
docs/: README.md  architecture.md  configuration.md  content-strategy.md  operations.md  prompt.md  research-agent.md  roadmap.md  tokens.md
formats/: engagement_post.yaml  quick_insight.yaml  story_post.yaml  thought_leadership.yaml
profiles/: agentic_ai_group.yaml  fastdx_linkedin.yaml  fastdx_page.yaml  gtemas_careers_page.yaml  gtemas_jsc_page.yaml  linkedin_profile.yaml  personal_profile.yaml  tech_group.yaml
src/social_agent/: __init__.py  agent.py  cli.py  config.py  types.py
src/social_agent/content/: formats.py  generator.py  images.py  scenarios.py
src/social_agent/research/: agent.py  discovery.py
src/social_agent/storage/: sqlite.py
src/social_agent/utils/: dotenv_writer.py  init_user_data.py  logging.py  paths.py
tests/: conftest.py  test_agent.py  test_gemini_models.py
tests/test_content/: test_config.py  test_formats.py
topics/: agentic_ai.yaml  ai_vietnam.yaml  arch_audit.yaml  dx_consulting.yaml  fintech_sea.yaml  leadership_tech.yaml  legacy_mod.yaml  zalo_os.yaml
