[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-agent"
version = "0.2.0"
description = "Cross-platform social media automation agent (Facebook + LinkedIn)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nick Nguyen" }
]
keywords = ["social-media", "automation", "facebook", "linkedin", "ai", "content-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "click>=8.1.7",
    "rich>=13.7.0",
    "Pillow>=10.0.0",
    "platformdirs>=4.0.0",
    # patchright chỉ cần cho Facebook Personal Profile automation
    # cài thêm nếu dùng: pip install patchright && python -m patchright install chromium
]

[project.optional-dependencies]
# Facebook Personal Profile browser automation
profile = ["patchright>=1.49.0"]

# Desktop app (Mac + Windows)
desktop = ["pywebview>=5.0"]

# Web server (VPS / headless)
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

# Install tất cả client modes
client = ["social-agent[desktop,web]"]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
# Entry point trỏ vào package — hoạt động đúng sau pip install -e .
social-agent = "social_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = [
    "S101",   # assert statements (OK trong tests)
    "S603",   # subprocess calls
    "E501",   # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]  # cho phép pytest tìm thấy social_agent package không cần pip install
